<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".laf.TheLostInformationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        >
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        tools:ignore="RtlSymmetry"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp">
            <EditText
                android:id="@+id/lostGoods"
                android:hint="@string/lostGoods"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="3dp"
            >
            <EditText
                android:id="@+id/lostPlace"
                android:hint="@string/lostPlace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="3dp"
            >
            <EditText
                android:id="@+id/phone"
                android:hint="@string/contactWay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <ImageView
        android:id="@+id/lostImg"
        android:layout_height="200dp"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        />


</LinearLayout>