<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".search.activity.search.SearchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="成绩查询"
        app:navigationIcon="@drawable/back"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="选择学期:"
            android:textSize="18sp"
            android:gravity="center"
            />

        <Spinner
            android:id="@+id/years_select"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:dropDownWidth="56dp"
            android:entries="@array/years_select"
            android:prompt="@string/data_select"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/semester_select"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:dropDownWidth="56dp"
            android:prompt="@string/semester_select"
            android:spinnerMode="dialog"
            android:entries="@array/semester_select"
            />
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_height="56dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/studentID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:text="202160211"
            android:hint="@string/studentNumber"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:passwordToggleEnabled="true"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:text="hhht03279335"
            android:hint="@string/studentPassword"/>

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/remember_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:paddingStart="5dp"
        android:text="记住密码" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/shape_score_verify_bg">
            <EditText
                android:id="@+id/security_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/verifyCode" />

            <ImageView
                android:id="@+id/verification_icon"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <Button
            android:id="@+id/verification_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@drawable/selector_verify_bt_bg"
            android:text="换一张"
            android:padding="5dp"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="查看成绩"
        android:background="@drawable/search_bt_bg"
        android:textColor="@android:color/white"/>

</LinearLayout>